# mercury-extension

./: .gitignore  .prettierignore  1-chat-simple.ipynb  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  chat-conversation.ipynb  chat-s3.ipynb  chat.ipynb  chat2.ipynb  columns.ipynb  config.py  config.toml  example.ipynb  expander.ipynb  file.ipynb  install.json  package.json  pyproject.toml  select-and-slider.ipynb  stocks.ipynb  text.ipynb  tsconfigbase.json
app/: index.js  package.json  webpack.config.js
chat-examples/: chat-completions-no-stream.ipynb  chat-completions-stream.ipynb  chat-with-database.ipynb
docs/mechanical-kuiper/: package-lock.json  package.json
examples/: 1-chat-simple.ipynb  2-chat-dataframe-plots.ipynb  3-chat-two-columns.ipynb  tabs.ipynb
examples-work-in-progress/: Untitled.ipynb  buttons.ipynb  chat-db.ipynb  chat-s3.ipynb  chat-tools-mcp.ipynb  chat-tools-websearch.ipynb  columns.ipynb  example-simple.ipynb  expander-Copy1.ipynb  expander.ipynb  multi-widget.ipynb  output-Copy1.ipynb  output.ipynb  progressbar.ipynb  select-and-slider.ipynb  test-notebook.ipynb  test.ipynb
mercury/: __init__.py  button.py  columns.py  download.py  expander.py  file.py  image.py  indicator.py  json.py  multiselect.py  number.py  pdf.py  select.py  slider.py  table.py
mercury/chat/: chatinput.py
mercury_app/: __init__.py  __main__.py  app.py  contents_handler.py  custom_contents_handler.py  decorator.py  execute.py  handlers.py  idle_timeout.py  mercury_hybrid_cm.py  notebooks.py  notebooks_meta.py  root.py  theme_handler.py
mercury_app/templates/: app.html  error.html  index.html  login.html  root.html
mercuryextension/: __init__.py
portal/: runner.py
portal/backend/: db.sqlite3
portal/backend/backend/: settings.py  urls.py
portal/backend/notebooks/: admin.py  launchers.py  models.py  serializers.py  urls.py  views.py
portal/backend/notebooks/migrations/: 0001_initial.py
portal/frontend/: next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js
portal/frontend/src/app/: globals.css  layout.tsx  (+1 more)
scripts/: bump_version.py
src/: index.ts
src/commands/: index.ts
src/executor/: codecell.ts
src/mercury/: index.ts  widget.ts
src/mercury/app/: model.ts  widget.ts
style/: index.css
ui-tests/: package.json
ui-tests/tests/: mercuryextension.spec.ts
widgets/: __init__.py  button.py  chat.py  checkbox.py  columns.py  download.py  expander.py  file.py  image.py  json.py  manager.py  md.py  multiselect.py  number.py  pdf.py  progress.py  progressbar.py  select.py  slider.py  tabs.py  text.py  theme.py
widgets/chat/: chat.py  chatinput.py  display.py  message.py
(+10 files in other folders)
